==> MengjunWen/sound_localization/sound_localization_v2/ES8388.cpp <==
#include "ES8388.h"
#include <Arduino.h>
#include <Wire.h>
#define ES8388_ADDR 0x10
#define ES8388_CONTROL1 0x00
#define ES8388_CONTROL2 0x01
#define ES8388_CHIPPOWER 0x02
#define ES8388_ADCPOWER 0x03
#define ES8388_DACPOWER 0x04
#define ES8388_CHIPLOPOW1 0x05
#define ES8388_CHIPLOPOW2 0x06
#define ES8388_ANAVOLMANAG 0x07
#define ES8388_MASTERMODE 0x08
#define ES8388_ADCCONTROL1 0x09
#define ES8388_ADCCONTROL2 0x0a
#define ES8388_ADCCONTROL3 0x0b
#define ES8388_ADCCONTROL4 0x0c
#define ES8388_ADCCONTROL5 0x0d
#define ES8388_ADCCONTROL6 0x0e
#define ES8388_ADCCONTROL7 0x0f
#define ES8388_ADCCONTROL8 0x10
#define ES8388_ADCCONTROL9 0x11
#define ES8388_ADCCONTROL10 0x12
#define ES8388_ADCCONTROL11 0x13
#define ES8388_ADCCONTROL12 0x14
#define ES8388_ADCCONTROL13 0x15
#define ES8388_ADCCONTROL14 0x16
#define ES8388_DACCONTROL1 0x17
#define ES8388_DACCONTROL2 0x18
#define ES8388_DACCONTROL3 0x19
#define ES8388_DACCONTROL4 0x1a
#define ES8388_DACCONTROL5 0x1b
#define ES8388_DACCONTROL6 0x1c
#define ES8388_DACCONTROL7 0x1d
#define ES8388_DACCONTROL8 0x1e
#define ES8388_DACCONTROL9 0x1f
#define ES8388_DACCONTROL10 0x20
#define ES8388_DACCONTROL11 0x21
#define ES8388_DACCONTROL12 0x22
#define ES8388_DACCONTROL13 0x23
#define ES8388_DACCONTROL14 0x24
#define ES8388_DACCONTROL15 0x25
#define ES8388_DACCONTROL16 0x26
#define ES8388_DACCONTROL17 0x27
#define ES8388_DACCONTROL18 0x28
#define ES8388_DACCONTROL19 0x29
#define ES8388_DACCONTROL20 0x2a
#define ES8388_DACCONTROL21 0x2b

bool ES8388::write_reg(uint8_t reg_add, uint8_t data) {
  Wire.beginTransmission(ES8388_ADDR);
  Wire.write(reg_add);
  Wire.write(data);
  return Wire.endTransmission() == 0;
}

bool ES8388::read_reg(uint8_t reg_add, uint8_t& data) {
  bool retval = false;
  Wire.beginTransmission(ES8388_ADDR);
  Wire.write(reg_add);
  Wire.endTransmission(false);
  Wire.requestFrom((uint16_t)ES8388_ADDR, (uint8_t)1, true);
  if (Wire.available() >= 1) {
    data = Wire.read();
    retval = true;
  }
  return retval;
}

bool ES8388::init() {
  bool res = true;
  /* INITIALIZATION (BASED ON ES8388 USER GUIDE EXAMPLE) */
  // Set Chip to Slave
  res &= write_reg(ES8388_MASTERMODE, 0x00);
  // Power down DEM and STM
  res &= write_reg(ES8388_CHIPPOWER, 0xFF);
  // Set same LRCK	Set same LRCK
  res &= write_reg(ES8388_DACCONTROL21, 0x80);
  // Set Chip to Play&Record Mode
  res &= write_reg(ES8388_CONTROL1, 0x05);
  // Power Up Analog and Ibias
  res &= write_reg(ES8388_CONTROL2, 0x40);

  /* ADC setting */
  // Micbias for Record
  res &= write_reg(ES8388_ADCPOWER, 0x00);
  // Enable Lin1/Rin1 (0x00 0x00) for Lin2/Rin2 (0x50 0x80)
  res &= write_reg(ES8388_ADCCONTROL2, 0x50);
  res &= write_reg(ES8388_ADCCONTROL3, 0x80);
  // PGA gain (0x88 - 24db) (0x77 - 21db)
  res &= write_reg(ES8388_ADCCONTROL1, 0x77);
  // SFI setting (i2s mode/16 bit)
  res &= write_reg(ES8388_ADCCONTROL4, 0x0C);
  // ADC MCLK/LCRK ratio (256)
  res &= write_reg(ES8388_ADCCONTROL5, 0x02);
  // set ADC digital volume
  // res &= write_reg(ES8388_ADCCONTROL8, 0x00);
  // res &= write_reg(ES8388_ADCCONTROL9, 0x00);
  // recommended ALC setting for VOICE refer to ES8388 MANUAL
  res &= write_reg(ES8388_ADCCONTROL10, 0xEA);
  res &= write_reg(ES8388_ADCCONTROL11, 0xC0);
  res &= write_reg(ES8388_ADCCONTROL12, 0x12);
  res &= write_reg(ES8388_ADCCONTROL13, 0x06);
  res &= write_reg(ES8388_ADCCONTROL14, 0xC3);

  /* DAC setting */
  // Power Up DAC& enable Lout/Rout
  res &= write_reg(ES8388_DACPOWER, 0x3C);
  // SFI setting (i2s mode/16 bit)
  res &= write_reg(ES8388_DACCONTROL1, 0x18);
  // DAC MCLK/LCRK ratio (256)
  res &= write_reg(ES8388_DACCONTROL2, 0x02);
  // unmute codec
  res &= write_reg(ES8388_DACCONTROL3, 0x00);
  // set DAC digital volume
  res &= write_reg(ES8388_DACCONTROL4, 0x00);
  res &= write_reg(ES8388_DACCONTROL5, 0x00);
  // Setup Mixer
  // (reg[16] 1B mic Amp, 0x09 direct;[reg 17-20] 0x90 DAC, 0x50 Mic Amp)
  res &= write_reg(ES8388_DACCONTROL16, 0x09);
  res &= write_reg(ES8388_DACCONTROL17, 0x50);
  res &= write_reg(ES8388_DACCONTROL18, 0x38);  //??
  res &= write_reg(ES8388_DACCONTROL19, 0x38);  //??
  res &= write_reg(ES8388_DACCONTROL20, 0x50);
  // set Lout/Rout Volume -45db
  res &= write_reg(ES8388_DACCONTROL24, 0x00);
  res &= write_reg(ES8388_DACCONTROL25, 0x00);
  res &= write_reg(ES8388_DACCONTROL26, 0x00);
  res &= write_reg(ES8388_DACCONTROL27, 0x00);

  /* Power up DEM and STM */
  res &= write_reg(ES8388_CHIPPOWER, 0x00);
  /* set up MCLK) */
  return res;
}
